deploys/selfoss/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: selfoss 
  labels:
    run: selfoss
spec:
  selector:
    app: selfoss
  ports:
  - name: http
    port: 80
    targetPort: 8888
    protocol: TCP
